# thoenix

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cog.toml  custom-outputs.nix  flake.nix  lib.nix
.github/workflows/: release.yaml
crates/cli/: Cargo.toml
crates/cli/src/: codec.rs  commands.rs  error.rs  handler.rs  main.rs  server.rs  terraform.rs
crates/http/: Cargo.toml
crates/http/src/: codec.rs  error.rs  handlers.rs  lib.rs  message.rs
crates/http/src/handlers/: tf.rs
crates/ssh/: Cargo.toml
crates/ssh/src/: codec.rs  error.rs  handler.rs  lib.rs  util.rs
crates/tofu/: Cargo.toml
crates/tofu/src/: error.rs  lib.rs
examples/flake-module/: .gitignore  flake.nix
examples/flake-module/flake-parts/: default.nix  terraform.nix  terraformConfiguration.nix
examples/flake-module/terraform/configurations/core/: main.tf  versions.tf
examples/lib/: flake.nix
examples/lib/flake-parts/: default.nix  terraform.nix  terraformConfiguration.nix
examples/lib/terraform/configurations/core/: terraform.nix
flake-parts/: cargo.nix  ci.nix  flake-module.nix  rust-toolchain.nix  shells.nix
