[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/justinrubek/thoenix"
license = "MIT"
repository = "https://github.com/justinrubek/thoenix"
version = "0.2.0"

[workspace.dependencies]
serde_json = "1"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[profile.release.package]
