[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.63"
bytes = "1.3.0"
ed25519-dalek = "1.0.1"
futures = "0.3.26"
futures-util = "0.3.26"
russh = "0.36.0"
russh-keys = "0.24.0"
thiserror = "1.0.38"
# clap = { version = "4.0.19", features = ["derive"] }
# reqwest = { version = "0.11.12", features = ["rustls-tls"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
