[package]
name = "thoenix"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.63"
bytes = "1.3.0"
ed25519-dalek = { workspace = true }
flate2 = "1.0.25"
futures = "0.3.26"
futures-util = "0.3.26"
git-pack = "0.30.1"
project-base-directory = "0.3"
russh = { workspace = true }
russh-keys = { workspace = true }
thiserror = "1.0.38"
clap = { version = "4", features = ["derive"] }
# reqwest = { version = "0.11.12", features = ["rustls-tls"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
thoenix-ssh = { path = "../ssh" }
thoenix-http = { path = "../http" }
