[package]
name = "thoenix-http"
edition = "2021"
version = "0.2.0"

[dependencies]
anyhow = "1.0.68"
axum = "0.6.4"
bytes = "1.4.0"
futures = "0.3.26"
futures-util = "0.3.26"
git2 = "0.16.1"
hyper = "0.14.24"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0.38"
tracing = "0.1.37"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tokio-util]
version = "0.7.4"
features = ["codec"]

[dependencies.tower]
version = "0.4"
features = ["util"]

[dependencies.tower-http]
version = "0.3.0"
features = ["fs", "cors", "trace"]
