[package]
name = "thoenix-ssh"
edition = "2021"
version = "0.2.0"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.63"
bytes = "1.3.0"
ed25519-dalek = { workspace = true }
flate2 = "1.0.25"
futures = "0.3.26"
futures-util = "0.3.26"
git-pack = "0.30.1"
russh = { workspace = true }
russh-keys = { workspace = true }
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tokio-util]
version = "0.7.4"
features = ["codec"]
